# flowsense

./: .gitignore  ANALIZADOR_UNIFICADO_README.md  CONFIGURACION_ZONAS_README.md  EJEMPLO_CONFIGURACION_ZONAS.md  FASES_PROYECTO.md  FASE_9_DATABASE_README.md  FASE_9_IMPLEMENTATION.md  GUIA_TEMAS_Y_ZONAS.md  MEJORAS_SCRIPT_ZONAS.md  OPTIMIZACION_BASE_DATOS.md  README.md  README_streamlit.md  RESUMEN_CONSOLIDACION.md  Reglas.md  TRACKING_STATS_README.md  backup_video_analysis.sql  database_schema.sql  database_schema_timescale.sql  debug_line_crossing.py  debug_tracking_comparison.py  debug_zones.py  docker-compose.yml  docker-setup.md  ejm_tracking.py  env.example  fix_zone_tracking.py  main.py  pyproject.toml  remove_unused_tables.sql  requirements.txt  requirements_streamlit.txt  salida_video_1.mp4.REMOVED.git-id  setup_database.py  setup_streamlit_demo.sh  simple_test.py  sript_test.py  streamlit_demo.py  test_comparison.py  test_database.py  test_geometry_only.py  (+6 more)
.streamlit/: config.toml
configs/: zonas_ejemplo.json  zonas_multiples.json
examples/: comparison_approaches.csv  database_output_examples.csv  line_crossing_events.csv  minute_statistics.csv  track_zone_status.csv  zone_events.csv
models/: yolov8x.pt.REMOVED.git-id
notebooks/: conteo_personas_con_flowsense.ipynb
outputs/: Video_dosr_yolov8n_stats_zones_20250901_095011_stats.txt  Video_dosr_yolov8n_stats_zones_20250901_095116_stats.txt  frame_detections.txt  sript_test_stats.json  streamlit_DosR_Crop_5x (online-video-cutter.com)-2_20250905_195339_yolov8n_stats_zones_20250905_195340_stats.txt  (+54 more)
(+108 files in other folders)
